--- a/index.htm
+++ b/index.htm
@@ -35,13 +35,13 @@
                     <input type="number" name="amount" id="amount" required>
                     <select id="currency" name="currency">
                         <option value="taka" selected>&#2547</option>
-                        <option value="dollars" selected>&#36</option>
+                        <option value="dollars">&#36</option>
                      </select>
                 </div>
             </div>
             <div class="input-box">
                 <label for="description">জিনিসের নাম</label>
-                <input type="text" name="item" id="item" required>
+                <input type="text" name="itemName" id="itemName" required>
             </div>
             <div class="buttons">
                 <button type="button" onclick="addItemExpense()"class="submit">সাবমিট</button>
@@ -49,6 +49,10 @@
             </div>
         </section>
     </main>
+
+    <p id="Test"></p>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
